# claude-starter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  PR_DESCRIPTION.md  README.md  requirements.txt
.claude/: settings.json  settings.local.json.example
.claude/commands/ai/: context.md  explain.md  refactor.md
.claude/commands/dev/: build.md  clean.md  init.md  serve.md  setup.md
.claude/commands/docs/: changelog.md  generate.md  readme.md
.claude/commands/git/: branch.md  commit.md  pr.md  sync.md
.claude/commands/mcp/: setup-docker.md  status.md
.claude/commands/quality/: format.md  lint.md  review.md  security.md  test.md
.claude/commands/setup/: wizard.md
.claude/hooks/: notification.py  post-tool-use.py  pre-tool-use.py  session-start.py  stop.py  user-prompt-submit.py
.claude/skills/setup-wizard/: README.md  install.sh  instructions.md  skill.json
.claude/skills/testing/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: claude-docs-update.yml  claude-issue-handler.yml  claude-pr-review.yml
docs/: COMMANDS.md  DOCKER_MCP_TOOLKIT.md  HOOKS.md  MCP_SERVERS.md  RAG_INTEGRATION.md  SETUP.md  SETUP_WIZARD.md  SKILLS.md
examples/rag-integration/: README.md
examples/rag-integration/commands/: knowledge-add.md  knowledge-search.md
examples/rag-integration/hooks/: rag-prompt-enhance.py
examples/rag-integration/skills/: SKILL.md
examples/tests/: README.md
examples/tests/go/: example_test.go
examples/tests/javascript/: example.test.js  jest.config.js
examples/tests/python/: pytest.ini  test_example.py
examples/tests/rust/: lib.rs
scripts/: setup-agent.py  setup-wizard.sh
scripts/wizard/: README.md  __init__.py  intelligent_setup_agent.py  requirements.txt  setup_agent.py
templates/: README.md
templates/javascript-node/: README.md  package.json
templates/python-basic/: README.md  pyproject.toml
templates/rust-basic/: Cargo.toml  README.md
