[package]
name = "myapp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust project created with Claude Code Starter"
readme = "README.md"
license = "MIT"
keywords = ["rust", "starter", "template"]
categories = ["development-tools"]

[dependencies]
# Add your dependencies here
# Example:
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
# Testing dependencies
# Example:
# criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "myapp"
path = "src/main.rs"
